[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/textbox.png" type="Texture" id=1]
[ext_resource path="res://textbox.gd" type="Script" id=2]
[ext_resource path="res://Assets/dogicapixelbold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="textbox" type="MarginContainer"]
margin_right = 51.0
margin_bottom = 46.0
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 51.0
margin_bottom = 46.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 48, 48 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 51.0
margin_bottom = 46.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 12.0
margin_top = 17.0
margin_right = 39.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
uppercase = true

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_LetterDisplayTimer_timeout"]
[connection signal="resized" from="MarginContainer/Label" to="." method="_on_Label_resized"]
